<resources>
    <string name="app_name">The Bubble</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="missing_account_message">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="next">Next</string>
    <string name="gender">I am a</string>
    <string name="transgender_woman">Transgender Woman</string>
    <string name="transgender_man">Transgender Man</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="genderqueer">Genderqueer</string>
    <string name="city">My City</string>
    <string name="nav_bar_connections">Connections</string>
    <string name="nav_bar_live">Live</string>
    <string name="nav_bar_Agent">Agent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_am_looking_for">I am looking for</string>
    <string name="age_range">Age range</string>
    <string name="welcome_string">App Navigation</string>
    <string name="about_me">About me</string>
    <string name="hi_my_name_is">Hi!, my name is...</string>
    <string name="description">Description</string>
    <string name="description_hint">Write something</string>
    <string name="error_message_names">Must enter name</string>
    <string name="chats_match_requests">Chats / Match requests</string>
    <string name="live_search_for_people_nearby">Live search for people nearby</string>
    <string name="search_for_matches_using_n_common_location_history">Search for matches using\n common location history</string>
    <string name="this_will_be_your_profile_picture">This will be your profile picture</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="live_search_description">Live search for matches nearby</string>
    <string name="connections_description">Chats and match requests</string>
    <string name="agent_description">Search for matches using \ncommon location history</string>
    <string name="logout"><u>Log out</u></string>


</resources>