<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_color">


    <TextView
        android:id="@+id/tendencyPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/PageTitle"
        android:text="@string/i_am_looking_for"
        />

    <LinearLayout
        android:id="@+id/gendersLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tendencyPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <CheckBox
            android:id="@+id/radio1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/man"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderPageTitle"
            style="@style/GenderRadioButton"
            />

        <CheckBox
            android:id="@+id/radio2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/woman"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio1"
            style="@style/GenderRadioButton"
            />

        <CheckBox
            android:id="@+id/radio3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/transgender_man"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio2"
            style="@style/GenderRadioButton"
            />

        <CheckBox
            android:id="@+id/radio4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/transgender_woman"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio3"
            style="@style/GenderRadioButton"
            />

        <CheckBox
            android:id="@+id/radio5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/genderqueer"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio4"
            style="@style/GenderRadioButton"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/age_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gendersLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/PageTitle"
        android:text="@string/age_range"
        />


    <com.google.android.material.slider.RangeSlider
        android:id="@+id/age_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:stepSize="1.0"
        android:valueFrom="18.0"
        android:valueTo="120.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_range"
        app:values="@array/initial_slider_values" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/age_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="26-40"
        android:textStyle="bold"
        />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:gravity="center"
        android:layout_margin="16dp"
        android:text="@string/next"
        app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
        app:iconSize="15sp"
        app:iconGravity="textEnd"
        android:theme="@style/NextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>